# MORSE

./: README.md  pyproject.toml
src/morse/: __init__.py  mainwindow.ui  ui_mainwindow.py
src/morse/controllers/: arduino_device.py  morse_translation.py  receiver.py  test.py
src/morse/models/: morse_experiment.py  receiver_model.py
src/morse/views/: morse_view.py
