[project]
name = "morse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HiddevdVliet", email = "hidde.van.der.vliet@student.uva.nl" }
]
requires-python = ">=3.13"
dependencies = [
    "morsecodepy>=4.2.1",
    "numpy>=2.3.5",
    "pyqtgraph>=0.14.0",
    "pyserial>=3.5",
    "pyside6>=6.10.1",
    "pyvisa>=1.15.0",
    "pyvisa-py>=0.8.1",
]

[project.scripts]
morse = "morse:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
